@@ -1,3 +1,11 @@
+2007-10-28  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclEncoding.c (TclInitEncodingSubsystem): Hard code the
+	iso8859-1 encoding, as it's needed for more than just text (especially
+	binary encodings...) Note that other encodings rely on the encoding
+	being a table encoding (!) so we can't use more efficient encoding
+	mapping functions.
+
 2007-10-27  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/regc_lex.c (lexescape): Close off one of the problems
